--- a/index.html
+++ b/index.html
@@ -6,43 +6,163 @@
 <title>Smart Tech Studio</title>
 
 <style>
-body{font-family:sans-serif;margin:0;background:#f2f2f2}
+body{margin:0;font-family:sans-serif;background:#f5f5f5}
 header{background:#1a73e8;color:white;padding:15px;text-align:center}
-button{padding:10px;margin:5px;border:none;background:#2196f3;color:white;border-radius:5px;cursor:pointer}
-#adminSection{display:none;background:#fff;padding:15px;margin:10px}
-#customerSection{padding:15px}
+button{padding:10px;margin:5px;border:none;border-radius:5px;background:#2196f3;color:white;cursor:pointer}
+#customerPanel,#adminPanel{padding:15px}
+#adminPanel{display:none;background:#fff}
+input,select{padding:8px;margin:5px;width:100%;box-sizing:border-box}
+.modal{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+background:white;padding:20px;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,0.3);width:350px}
+.overlay{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5)}
+table{width:100%;border-collapse:collapse}
+th,td{border:1px solid #ccc;padding:8px;text-align:center}
 </style>
 </head>
 
 <body>
 
 <header>
-Smart Tech Studio
-<br>
+<h2>Smart Tech Studio</h2>
 <button onclick="showCustomer()">Customer</button>
 <button onclick="showAdmin()">Admin</button>
 </header>
 
-<div id="customerSection">
-<h2>Customer Panel</h2>
-<button onclick="alert('Service Opened')">Open Service</button>
+<div id="customerPanel">
+<h3>Customer Panel</h3>
+<button onclick="openService()">Order Service</button>
+<p>Balance: <span id="balanceDisplay">0</span> ৳</p>
 </div>
 
-<div id="adminSection">
-<h2>Admin Panel</h2>
-<button onclick="alert('Admin Action')">Admin Action</button>
+<div id="adminPanel">
+<h3>Admin Panel</h3>
+
+<h4>Orders</h4>
+<table>
+<thead>
+<tr><th>Name</th><th>Service</th><th>Price</th><th>Status</th><th>Action</th></tr>
+</thead>
+<tbody id="ordersTable"></tbody>
+</table>
+
+<h4>Update Price</h4>
+<input type="text" id="priceService" placeholder="Service Name">
+<input type="number" id="newPrice" placeholder="New Price">
+<button onclick="updatePrice()">Update</button>
+
+<h4>Upload File</h4>
+<input type="text" id="orderIdInput" placeholder="Order ID">
+<input type="file" id="fileInput">
+<button onclick="uploadFile()">Upload</button>
+
 </div>
 
-<script>
-function showAdmin(){
-document.getElementById("adminSection").style.display="block";
-document.getElementById("customerSection").style.display="none";
+<div class="overlay" id="overlay"></div>
+
+<div class="modal" id="serviceModal">
+<h3>Order Service</h3>
+<input type="text" id="custName" placeholder="Your Name">
+<select id="serviceSelect">
+<option value="NID">NID - 100৳</option>
+<option value="TIN">TIN - 150৳</option>
+</select>
+<button onclick="submitOrder()">Submit</button>
+<button onclick="closeService()">Close</button>
+</div>
+
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore.js";
+import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-storage.js";
+
+const firebaseConfig = {
+  apiKey: "YOUR_KEY",
+  authDomain: "YOUR_DOMAIN",
+  projectId: "YOUR_PROJECT",
+  storageBucket: "YOUR_BUCKET",
+  messagingSenderId: "YOUR_ID",
+  appId: "YOUR_APPID"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const storage = getStorage(app);
+
+window.showAdmin = function(){
+document.getElementById("adminPanel").style.display="block";
+document.getElementById("customerPanel").style.display="none";
+loadOrders();
 }
 
-function showCustomer(){
-document.getElementById("adminSection").style.display="none";
-document.getElementById("customerSection").style.display="block";
+window.showCustomer = function(){
+document.getElementById("adminPanel").style.display="none";
+document.getElementById("customerPanel").style.display="block";
 }
+
+window.openService = function(){
+document.getElementById("serviceModal").style.display="block";
+document.getElementById("overlay").style.display="block";
+}
+
+window.closeService = function(){
+document.getElementById("serviceModal").style.display="none";
+document.getElementById("overlay").style.display="none";
+}
+
+window.submitOrder = async function(){
+const name=document.getElementById("custName").value;
+const service=document.getElementById("serviceSelect").value;
+const price= service==="NID"?100:150;
+
+await addDoc(collection(db,"orders"),{
+name,service,price,status:"Pending"
+});
+
+alert("Order Submitted");
+closeService();
+}
+
+async function loadOrders(){
+const querySnapshot=await getDocs(collection(db,"orders"));
+const tbody=document.getElementById("ordersTable");
+tbody.innerHTML="";
+querySnapshot.forEach(docSnap=>{
+const data=docSnap.data();
+const tr=document.createElement("tr");
+tr.innerHTML=`
+<td>${data.name}</td>
+<td>${data.service}</td>
+<td>${data.price}</td>
+<td>${data.status}</td>
+<td>${data.status==="Pending"?`<button onclick="completeOrder('${docSnap.id}',${data.price})">Complete</button>`:"Done"}</td>
+`;
+tbody.appendChild(tr);
+});
+}
+
+window.completeOrder=async function(id,price){
+await updateDoc(doc(db,"orders",id),{status:"Completed"});
+alert("Completed");
+loadOrders();
+}
+
+window.updatePrice=function(){
+alert("Price update logic add later (dynamic service system লাগবে)");
+}
+
+window.uploadFile=async function(){
+const id=document.getElementById("orderIdInput").value;
+const file=document.getElementById("fileInput").files[0];
+if(!id||!file) return alert("Fill all");
+
+const storageRef=ref(storage,`orders/${id}_${file.name}`);
+await uploadBytes(storageRef,file);
+const url=await getDownloadURL(storageRef);
+await updateDoc(doc(db,"orders",id),{fileURL:url});
+alert("File Uploaded");
+}
+
 </script>
 
 </body>
